chore: use webpack to import and compile JS scripts

--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>Darts</title>
-		<script src="libs/babel.js"></script>
-        <script src="libs/react.js"></script>
-        <script src="libs/react-dom.js"></script>
         <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" />
         <link href="css/style.css" type="text/css" rel="stylesheet" />
     </head>
     <body>
     <div id="container" class="container-fluid"></div>
-    <script type="text/babel" src="components/components.jsx"></script>
-    <script type="text/babel" src="application.js"></script>
+    <script src="/bundle.js"></script>
     </body>
 </html>
